# hippocampus

./: .env.example  .gitignore  LICENSE  README.md  app.py  archive_memory.py  pyproject.toml  requirements.txt
chromadb_data/: chroma.sqlite3
hippocampus/: config.py  db.py  llm.py  ui.py
